--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
 fastapi>=0.115.4
 uvicorn>=0.32.0
 SQLAlchemy>=2.0.36
-python-jose>=3.3.0
-pydantic-settings>=2.6.1
-loguru>=0.7.2
 passlib>=1.7.4
 bcrypt>=4.2.0
+python-jose>=3.3.0
 email-validator>=2.2.0
+langchain_openai>=0.2.5
+pydantic-settings>=2.6.1
+loguru>=0.7.2
