feature: 修改使用postgres数据库

--- a/.env
+++ b/.env
@@ -1,4 +1,8 @@
-DATABASE_URL=sqlite:///./data/sql_app.db
 SECRET_KEY=your-secret-key-here 
 OPENAI_API_KEY=sk-oN2Ar0kMKXds5qs35b2f9a18Af1346C08cDc5917B2F4983a
 OPENAI_BASE_URL=https://api.turboai.one/v1
+POSTGRES_SERVER=localhost
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=postgres
+POSTGRES_DB=butter
+POSTGRES_PORT=5432
