--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ SECRET_KEY=your-secret-key-here
 OPENAI_API_KEY=sk-oN2Ar0kMKXds5qs35b2f9a18Af1346C08cDc5917B2F4983a
 OPENAI_BASE_URL=https://api.turboai.one/v1
 POSTGRES_SERVER=localhost
-POSTGRES_USER=postgres
-POSTGRES_PASSWORD=postgres
+POSTGRES_USER=bukp
+POSTGRES_PASSWORD=hope
 POSTGRES_DB=butter
 POSTGRES_PORT=5432
