--- a/requirements.txt
+++ b/requirements.txt
@@ -9,4 +9,6 @@ langgraph>=0.2.44
 langchain_openai>=0.2.5
 pydantic-settings>=2.6.1
 loguru>=0.7.2
-psycopg2-binary>=2.9.10
+psycopg[binary,pool]>=3.2.3
+greenlet>=3.1.1
+langgraph-checkpoint-postgres>=2.0.2
