--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ fastapi>=0.115.4
 uvicorn>=0.32.0
 SQLAlchemy>=2.0.36
 passlib>=1.7.4
-bcrypt>=4.2.0
+bcrypt==3.2.2
 python-jose>=3.3.0
 email-validator>=2.2.0
 langgraph>=0.2.44
