refactor: 调整接口文档

--- a/config.template.yaml
+++ b/config.template.yaml
@@ -6,6 +6,8 @@ app:
     app: "/api/v1"
     admin: "/api/admin/v1"
     common: "/api/common/v1"
+  access_log: false
+  reload: true
 
 database:
   host: "localhost"
